--- a/app-frontend/src/comps/Navbar/navbar.css
+++ b/app-frontend/src/comps/Navbar/navbar.css
@@ -22,6 +22,11 @@ header{
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Adjust shadow intensity as needed */
 }
 
+.transit{
+    transition: transform 0.5s ease-in-out
+}
+
+
 /* .hidden{
     display: none;
 } */
