--- a/app-frontend/src/views/Home/home.css
+++ b/app-frontend/src/views/Home/home.css
@@ -18,6 +18,14 @@ section{
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
 } */
 
+button:hover{
+    scale: 1.15;
+}
+
+img:hover{
+    scale:1.1;
+}
+
 @keyframes fade{
     from {
         opacity: 0;
